linkchecker 7.x-dev, nightly
----------------------------

* Remove documentation leftover from readme about a setting not available.
* #1727552: Notice: Undefined property: stdClass::$language in linkchecker_parse_fields(). Core follow up of #1495648: Introduce entity language support
* Notice: Undefined variable: is_https in _linkchecker_extract_links()
* #1804842: Lots of warnings when comment/block modules are not installed
* Set full HTML format in block test
* Added interface tests to verify drupal_set_message()
* #1857620: hook_form_alter() fails on BASE_FORM_ID 'comment_form'
* #1811908: Allow extracting protocol relative url's
* #1831630: Array being presented to Status report page
* #1441574: Port D6 access bypass bugfixes to D7.
* #1678812: Notice: Undefined property: stdClass::$module in _linkchecker_add_block_custom_links()
* #1678812: Refactored blocks extraction/replacement
* #1678812: Added linkchecker_block_custom_block_get() for a more consitent block_custom object.
* #1586022: linkchecker generating bad User-Agent string
* Status code 500 on HEAD/GET does not increase fail_count
* #1524732: Notice on blocks save / Blocks body cannot exists

linkchecker 7.x-1.0-beta1, February 15, 2012
--------------------------------------------

* #1438376: D7 Upgrade failed with PHP 5 < 5.3.0, array_replace() missing
* #1429284: Don't follow redirects
* #1416830: Link fields are not being extracted
* #1410376: Cannot open blocks to edit from the broken links report
* #1410388: Cannot open comment to edit from links in the broken links report
* #1410402: After deleting comments, Links are still displayed as Broken
* #1405512: After deleting blocks, Links are still displayed as Broken
* #1405504: Re-check link after creating redirect
* #1350926: Added Drush support
* HTML5: Added support for <track> tags in <audio> and <video> tags
* Replace links with 301 redirections in all supported fields.
* #1388760: Use (node|comment)_load_multiple() where possible.