@@ -1,6 +1,7 @@
 linkchecker 7.x-dev, nightly
 ----------------------------
 
+* #1450672: Cron task does not impersonate to admin user on automatic content updates.
 * Remove documentation leftover from readme about a setting not available.
 * #1727552: Notice: Undefined property: stdClass::$language in linkchecker_parse_fields(). Core follow up of #1495648: Introduce entity language support
 * Notice: Undefined variable: is_https in _linkchecker_extract_links()
